# hardware-wallet-esp32

./: .gitignore  LICENSE  README.md  REFACTOR_ARQUITECTURA.md
desktop/: psbt_builder.py  requirements.txt  wallet_cli.py
docs/: SECURITY_ANALYSIS.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  main.c
firmware/main/crypto/: address.c  address.h  bip32.c  bip32.h  bip39.c  bip39.h  bip44.c  bip44.h  hash.c  hash.h  psbt.c  psbt.h  rand.c  rand.h
firmware/main/drivers/: buttons.c  buttons.h  oled.c  oled.h  sd_card.c  sd_card.h
firmware/main/include/: app_state.h  errors.h  hw_config.h
firmware/main/security/: flash_enc.c  flash_enc.h  hmac.c  hmac.h  jtag.c  jtag.h  secure_boot.c  secure_boot.h
firmware/main/ui/: confirm.c  confirm.h  menu.c  menu.h  pin_entry.c  pin_entry.h  wizard.c  wizard.h
firmware/main/wallet/: key_management.c  key_management.h  pin.c  pin.h  state_machine.c  state_machine.h
